tests/scale_codec_ui/overflowing_index_value.rs
#[derive(::parity_scale_codec::Encode)]
#[codec(crate = ::parity_scale_codec)]
pub enum Enum {
    #[codec(index = 256)]
    Variant1,
}

fn main() {}
